[prettier] WEB-73900: improve caret restoration using range markers
GitOrigin-RevId: edece991902f75cb2b3a40d83b361720d3d4fa84