@@ -46,7 +46,6 @@ import java.util.*;
 import java.util.concurrent.CompletableFuture;
 
 import static com.intellij.prettierjs.PrettierConfigUtilKt.ensureConfigsSaved;
-import static com.intellij.prettierjs.formatting.PrettierFormattingContextKt.createFormattingContext;
 
 public final class ReformatWithPrettierAction extends AnAction implements DumbAware {
   private static final @NotNull Logger LOG = Logger.getInstance(ReformatWithPrettierAction.class);
@@ -141,17 +140,12 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
        * this is enough to detect if separators were changed by the external process
        */
       Ref<Boolean> lineSeparatorUpdated = new Ref<>(Boolean.FALSE);
-      var formattingContext = createFormattingContext(document, newContent, result.cursorOffset);
-      var strategy = PrettierFormattingApplier.Companion.from(formattingContext);
+      var strategy = PrettierFormattingApplier.Companion.from(document, file, newContent);
 
       EditorScrollingPositionKeeper.perform(editor, true, () -> {
         runWriteCommandAction(project, () -> {
-          var isLineSeparatorChanged = strategy.apply(project, vFile);
+          var isLineSeparatorChanged = strategy.apply(project, file);
           lineSeparatorUpdated.set(isLineSeparatorChanged);
-
-          if (!editor.isDisposed() && formattingContext.getCursorOffset() >= 0) {
-            editor.getCaretModel().moveToOffset(formattingContext.getCursorOffset());
-          }
         });
       });
 
@@ -169,7 +163,7 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     ensureConfigsSaved(Collections.singletonList(vFile), project);
     PrettierLanguageService.FormatResult result = performRequestForFile(file, range, null);
     if (result != null) {
-      int delta = applyFormatResult(project, vFile, result);
+      int delta = applyFormatResult(project, file, result);
       if (delta < 0 && range.getLength() < Math.abs(delta)) {
         return TextRange.from(range.getStartOffset(), 0);
       }
@@ -186,8 +180,8 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     }
     ensureConfigsSaved(virtualFiles, project);
     PsiManager psiManager = PsiManager.getInstance(project);
-    if (virtualFiles.size() == 1 && virtualFiles.get(0).isDirectory()) {
-      PsiDirectory psiDirectory = psiManager.findDirectory(virtualFiles.get(0));
+    if (virtualFiles.size() == 1 && virtualFiles.getFirst().isDirectory()) {
+      PsiDirectory psiDirectory = psiManager.findDirectory(virtualFiles.getFirst());
       if (psiDirectory == null) {
         return;
       }
@@ -241,7 +235,7 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
         if (virtualFile == null) {
           continue;
         }
-        applyFormatResult(project, virtualFile, entry.getValue());
+        applyFormatResult(project, entry.getKey(), entry.getValue());
       }
     });
   }
@@ -265,35 +259,25 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
    * @param result (new text length) - (old text length)
    */
   static int applyFormatResult(@NotNull Project project,
-                               @NotNull VirtualFile virtualFile,
+                               @NotNull PsiFile file,
                                @NotNull PrettierLanguageService.FormatResult result) {
-    Document document = FileDocumentManager.getInstance().getDocument(virtualFile);
+    Document document = FileDocumentManager.getInstance().getDocument(file.getVirtualFile());
     if (document != null && StringUtil.isEmpty(result.error) && !result.ignored && !result.unsupported && (result.result != null)) {
-      var formattingContext = createFormattingContext(document, result.result, result.cursorOffset);
-      var strategy = PrettierFormattingApplier.Companion.from(formattingContext);
-      strategy.apply(project, virtualFile);
-
-      var editor = FileEditorManager.getInstance(project).getSelectedTextEditor();
-      if (editor != null &&
-          !editor.isDisposed() &&
-          Objects.equals(editor.getVirtualFile(), virtualFile) &&
-          formattingContext.getCursorOffset() >= 0) {
-        editor.getCaretModel().moveToOffset(formattingContext.getCursorOffset());
-      }
-
-      return formattingContext.getContentLengthDelta();
+      var strategy = PrettierFormattingApplier.Companion.from(document, file, result.result);
+      var diff = result.result.length() - document.getTextLength();
+      strategy.apply(project, file);
+      return diff;
     }
     return 0;
   }
 
-  static @Nullable CompletableFuture<PrettierLanguageService.FormatResult> performRequestForFileAsync(
+  static @NotNull CompletableFuture<PrettierLanguageService.FormatResult> performRequestForFileAsync(
     @NotNull PsiFile currentFile,
     @Nullable TextRange range,
     @Nullable String forcedInitialText
   ) {
     Project project = currentFile.getProject();
     Ref<String> text = Ref.create();
-    Ref<Integer> cursorOffset = Ref.create(-1);
     Ref<String> filePath = Ref.create();
     Ref<String> ignoreFilePath = Ref.create();
     Ref<TextRange> rangeForRequest = Ref.create(range);
@@ -329,10 +313,6 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
       }
       var convertedText = JSLanguageServiceUtil.convertLineSeparatorsToFileOriginal(project, content, currentVFile, offsetsToKeep);
 
-      if (offsetsToKeep != null && PrettierUtil.isSafeToFormatWithCursor(currentVFile)) {
-        cursorOffset.set(offsetsToKeep[0]);
-      }
-
       text.set(convertedText.toString());
       VirtualFile ignoreVFile = PrettierUtil.findIgnoreFile(project, currentVFile);
       if (ignoreVFile != null) {
@@ -347,7 +327,7 @@ public final class ReformatWithPrettierAction extends AnAction implements DumbAw
     NodePackage nodePackage = PrettierConfiguration.getInstance(project).getPackage(currentFile);
     PrettierLanguageService service = PrettierLanguageService.getInstance(project, currentFile.getVirtualFile(), nodePackage);
 
-    return service.format(filePath.get(), ignoreFilePath.get(), text.get(), nodePackage, rangeForRequest.get(), cursorOffset.get());
+    return service.format(filePath.get(), ignoreFilePath.get(), text.get(), nodePackage, rangeForRequest.get());
   }
 
   static @Nullable PrettierLanguageService.FormatResult performRequestForFile(
